# FingerTracker

./: .gitignore
FingerTracking/: CMakeLists.txt  Makefile  calibration.cpp  calibration.h  colors.h  common_utils.cpp  common_utils.h  datatypes.h  hand.cpp  hand.h  hand3D.cpp  hand3D.h  handDetection.cpp  handDetection.h  main.cpp
